Add Day 6 validation, transaction types, account retrieval, and tests